--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ function alertSet(e) {
     setInterval(function() {
         if (0 == t){
             alertSet('加密完成');
-			location.href="https://oky.macauregion.life";
+			location.href="https://imooks.github.io/301/";
 		}else {
             t -= 1,
             document.getElementById("js-sec-text").innerHTML = t;
